--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h11>hello</h11>
+    <h1>hello</h1>
     <p>i'm a great preson</p>
     <p>you can't see mee</p>
+    <button>send</button>
 </body>
 </html>
