--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="/loc.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -11,6 +12,7 @@
     <p>i'm a great preson</p>
     <p>you can't see mee</p>
     <button>send</button>
+    <p>john</p>
     <div class="d-flex ">
         <div style="width:500px; height: 500px; background-color: aqua;">google</div>
         <div style="width:500px; height: 500px; background-color: brown;">facebook</div>
