--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>you can't see mee</p>
     <button>send</button>
     <p>john</p>
+    <p>i'm indian </p>
+    <div style="width:500px; height: 100px; background-color: rgb(0, 0, 0);">google</div>
     <div class="d-flex ">
         <div style="width:500px; height: 500px; background-color: aqua;">google</div>
         <div style="width:500px; height: 500px; background-color: brown;">facebook</div>
